# tpcanalysis

./: .clang-format  .gitignore  CMakeLists.txt  README.md  commit.sh  howto.txt  install.sh  main.cpp  plotgraph.py  point_coords_u.csv  point_coords_v.csv  point_coords_w.csv  runmacro.cpp  runmacro2.cpp  runmacro_elitpc.cpp  runmacro_mini.cpp  test.cpp  tpcanalexec  try_build_coords.cpp
converteddata/: counts_each.csv  data2_1.csv  text_xyz.csv
dict/: CMakeLists.txt  LinkDefGET.h
dict/include/: GDataChannel.h  GDataFrame.h  GDataSample.h  GFrameHeader.h
dict/src/: GDataChannel.cpp  GDataFrame.cpp  GDataSample.cpp  GFrameHeader.cpp
include/: ErrorCodesMap.hpp  cleanUVW.hpp  convMatData.hpp  convertHitData.hpp  convertUVW.hpp  convertUVW_elitpc.hpp  convertUVW_mini.hpp  convertXYZ.hpp  dataFPN.hpp  dataUVW.hpp  dataXYZ.hpp  filterEventsXY.hpp  generalDataStorage.hpp  hitPoints.hpp  loadData.hpp  miscFunc_elitpc.hpp  rawData.hpp  viewGraph.hpp
junk/: convertHitData.hpp  convertXYZ.cpp  convertXYZ.hpp  findAverageIntP.ipynb  findPosEvents.ipynb  fitXYZLine.ipynb  frameGUI.cpp  frameGUI.hpp  macroGUI.cpp  reorderChFunc.cpp
python_comp/: calculateLineStatistics.ipynb  findBrightestPoint.ipynb  findPosEvents.ipynb  fitUVWLine.ipynb  fitXYZLine.ipynb  houghtransform.ipynb  llmClassification.ipynb  openimages.ipynb  printFit.ipynb  printFitMathematica.ipynb  printFitV2.ipynb  radonTransform.ipynb  radonTransformImage.ipynb  readcsv.ipynb
python_comp/obsolete/: fitRectangles.ipynb  openimages.ipynb  polyMesh.ipynb  printFitV2.ipynb
python_comp/src/: openCSV.py  openImage.py  processLine.py  processUVWLines.py  processXYZLines.py
scripts/: createNormCSV.cpp  createNormCSV_elitpc.cpp  createNormCSV_mini.cpp  entries_elitpc.txt  entries_minitpc.txt
src/: cleanUVW.cpp  convMatData.cpp  convertHitData.cpp  convertUVW.cpp  convertUVW_elitpc.cpp  convertUVW_mini.cpp  convertXYZ.cpp  filterEventsXY.cpp  loadData.cpp  miscFunc_elitpc.cpp  viewGraph.cpp
utils/: cfg_entries_u.txt  ch_norm_ratios.csv  ch_norm_ratios_elitpc.csv  channelorder_u.txt  channelorder_v.txt  channelorder_w.txt
utils/old/: OLD_ch_norm_ratios.csv
